[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "jyyslide-md"
description = "Generate jyy style slides with markdown."
dependencies = [
  "requests",
  "jinja2",
  "markdown",
  "pyquery",
  "pygments",
  "lxml",
  "pyyaml",
  "types-markdown",
  "types-requests",
  "types-pyyaml",
  "livereload",
]
authors = [
  { name = "zweix123", email = "197983044@qq.com" }
]
maintainers = [
  { name = "zweix123", email = "197983044@qq.com" }
]
readme = "README.md"
license = { file = "License" }
keywords = ["jyy", "slide", "markdown", "md"]

[project.urls]
Repository = "https://github.com/zweix123/jyyslide-md/tree/main"

[project.scripts]
jyyslide-md = "src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
